# LatentQuant

./: .gitignore  1.txt  Good Repo Initialization.ipynb  Good_repo Initialization (1).ipynb  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  pyproject.toml   requirements.txt  setup.py  squeeze.py  test_imports.py  test_package.py
.github/workflows/: ci.yml  docs.yml
docs/: 404.html  index.html  index.md  objects.inv  search.html
docs/_sources/: index.rst.txt
docs/api/: index.html
docs/examples/: index.html
docs/installation/: index.html
docs/scripts/: gen_api_docs.py
docs/search/: search_index.json
embd_space_metrics/: README.md  __init__.py  cli.py  example_usage.py  model_testing_v2.ipynb  test_module.py
embd_space_metrics/evaluation/: __init__.py  evaluator.py  visualizer.py
embd_space_metrics/extraction/: __init__.py  features.py  model_loader.py
embd_space_metrics/metrics/: __init__.py  base.py  cka.py  geometry.py  helpers.py  jaccard.py  pwcca.py  registry.py  relational.py  rsa.py
embeddings_squeeze/: VISUALIZATION_README.md  __init__.py  cli.py  squeeze.py  test_integration.py  test_simplified_baseline.py  train_baseline.py  visualize.py
embeddings_squeeze/configs/: __init__.py  clearml_credentials.yaml  default.py  pointtransformer_s3dis.yml  randlanet_s3dis.yml
embeddings_squeeze/data/: __init__.py  base.py  oxford_pet.py
embeddings_squeeze/loggers/: __init__.py  (+1 more)
squeezing_metrics_dir/: evaluation_results_all_metrics (1).json  model_testing_v2.ipynb  results.json
src/: train_baseline.py  visualize.py
(+66 files in other folders)
