# pyproject.toml for embeddings_squeeze
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embeddings_squeeze"
version = "0.1.0"
description = "Vector Quantization for Embedding Compression in Segmentation Models"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tensorboard>=2.8.0",
    "tqdm>=4.64.0",
    "seaborn>=0.12.0",
    "vector_quantize_pytorch>=1.0.0",
    "clearml>=1.0.0",
    "omegaconf>=2.3.0",
    "torchmetrics>=0.11.0",
]

[tool.setuptools]
package-dir = {"embeddings_squeeze" = "src"}
packages = [
    "embeddings_squeeze",
    "embeddings_squeeze.configs",
    "embeddings_squeeze.data",
    "embeddings_squeeze.loggers",
    "embeddings_squeeze.models",
    "embeddings_squeeze.models.backbones",
    "embeddings_squeeze.utils",
]

[tool.setuptools.package-data]
embeddings_squeeze = ["configs/*.yaml"]

